--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rimraf dist coverage",
     "build": "npm run compile && npm run build-schema",
-    "build-schema": "ts-json-schema-generator --no-top-ref --path src/settings/CSpellSettingsDef.ts --type CSpellSettings --validation-keywords markdownDescription  --validation-keywords scope --validation-keywords deprecated --validation-keywords deprecatedMessage -o  ./cspell.schema.json && cp ./cspell.schema.json ../..",
+    "build-schema": "ts-json-schema-generator --no-top-ref --path src/settings/CSpellSettingsDef.ts --type CSpellSettings --validation-keywords markdownDescription  --validation-keywords scope --validation-keywords deprecated --validation-keywords deprecationMessage -o  ./cspell.schema.json && cp ./cspell.schema.json ../..",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "test-schema": "ajv -s ./cspell.schema.json -d \"cspell.test.{json,yaml}\" -c ./ajv.config.js",
