dev: add some samples

--- a/packages/cspell-lib/samples/yaml-config/cspell.yaml
+++ b/packages/cspell-lib/samples/yaml-config/cspell.yaml
@@ -1,5 +1,5 @@
 id: Yaml Example Config
 import:
-  - ./../cspell-imports.json
+  - ./../cspell-imports.json # Note this one does not exist on purpose.
   - ./../cspell-includes.json
   - ../.cspell.json
