--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - "**/package.json"
       - "**/package-lock.json"
+    paths-ignore:
+      - "docs/**"
+
   workflow_dispatch:
     inputs:
       updateSnapshots:
