--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,56 @@
-theme: jekyll-theme-slate
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+title: CSpell - A Spell Checker for Code!
+email: &email "jason@streetsidesoftware.nl"
+name: &name "Jason Dent" # &name is a YAML anchor which can be *referenced later
+description: >- # this means to ignore newlines until "baseurl:"
+  User's guide to CSpell.
+url: https://streetsidesoftware.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/cspell" # the subpath of your site, e.g. "/blog"
+repository: "streetsidesoftware/cspell"
+github_username: streetsidesoftware
+# twitter_username: jekyllrb
+# github_username: jekyll
+
+# Build settings
+# theme: jekyll-theme-slate
+theme: minima
+plugins:
+  - jekyll-feed
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
