ci: Update doc workflows.

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -6,8 +6,11 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - "docs/**"
+    paths:
+      - "**/package.lock"
+      - "**/*.ts"
+      - "integration-tests/**"
+      - "!docs/**"
 
 jobs:
   test:
