--- a/.prettierignore
+++ b/.prettierignore
@@ -8,6 +8,7 @@ CHANGELOG.md
 coverage
 cspell.json
 cspell.schema.json
+docs/_site/**
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
 lerna.json
