--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -34,3 +34,6 @@ end
 gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 
 gem "webrick", "~> 1.7"
+
+# Experimental theme
+gem "just-the-docs", "~> 0.3.3"
