docs: try to get the theme working

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -65,6 +65,8 @@ permalink: /:categories/:title/
 # See: [Home | Just the Docs](https://pmarsceill.github.io/just-the-docs/)
 #
 
+remote_theme: pmarsceill/just-the-docs
+
 # Aux links for the upper right navigation
 aux_links:
   "CSpell on GitHub":
