docs: clean up docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,6 +37,7 @@ remote_theme: pmarsceill/just-the-docs
 
 plugins:
   # - jekyll-feed
+  - jekyll-relative-links
 
 # permalink: pretty
 permalink: /:categories/:title/
