--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "bugs": {
     "url": "https://github.com/streetsidesoftware/cspell/issues"
   },
-  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
+  "homepage": "https://streetsidesoftware.github.io/cspell/",
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
