--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -66,7 +66,7 @@
   "bugs": {
     "url": "https://github.com/streetsidesoftware/cspell/issues"
   },
-  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
+  "homepage": "https://streetsidesoftware.github.io/cspell/",
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
