lint: fix lint issues

--- a/.prettierignore
+++ b/.prettierignore
@@ -9,6 +9,7 @@ coverage
 cspell.json
 cspell.schema.json
 docs/_site/**
+docs/types/cspell-types/**
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
 lerna.json
