docs: add link to PayPal

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -80,6 +80,10 @@ collections:
 
 defaults:
   - scope:
+      path: "assets/images"
+    values:
+      image: true
+  - scope:
       path: "types/*"
     values:
       nav_order: 5
