--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
+* text=auto eol=lf
 *.txt		text eol=lf
 *.ts        text eol=lf
 *.go        text eol=lf
