--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -15,7 +15,7 @@
     "test-unit": "jest",
     "test-spelling": "cspell \"src/**/*.ts\" \"*.md\"",
     "smoke-test": "../bin.js words ./dictionaries/nl -n 100",
-    "test": "npm run test-unit && npm run test-spelling",
+    "test": "npm run test-unit",
     "build": "tsc -p .",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test",
@@ -38,21 +38,20 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
-    "@types/fs-extra": "^9.0.8",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^16.0.0",
-    "cspell": "^5.2.4",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "@types/fs-extra": "^9.0.12",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.6",
+    "jest": "^27.1.0",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.3",
-    "typescript": "^4.2.3"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
-    "commander": "^7.1.0",
+    "commander": "^8.1.0",
     "fs-extra": "^10.0.0",
     "gensequence": "^3.1.1",
-    "iconv-lite": "^0.6.2"
+    "iconv-lite": "^0.6.3"
   },
   "eslintConfig": {
     "root": true,
