--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "homepage": "https://streetsidesoftware.github.io/cspell/",
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "ajv-cli": "^5.0.0",
