--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -43,6 +43,9 @@
   ],
   "author": "Jason Dent",
   "license": "MIT",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "devDependencies": {
     "ajv-cli": "^5.0.0",
     "jest": "^27.1.0",
