--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "coverage": "lerna run coverage --stream && npm run coverage-collect",
     "coverage-collect": "globcat packages/*/coverage/lcov.info > lcov.info",
     "install": "lerna bootstrap --ci",
+    "ibt": "npm install && npm run build && npm test",
     "bootstrap": "lerna bootstrap --no-ci",
     "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
     "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml,json}\"",
@@ -28,9 +29,9 @@
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-commits --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-commits --conventional-graduate",
-    "pub": "npm install && npm test && lerna publish --conventional-commits",
-    "pub-grad": "npm install && npm test && lerna publish --conventional-commits --conventional-graduate",
-    "pub-next": "npm install && npm test && lerna publish --conventional-commits --conventional-prerelease --dist-tag next",
+    "pub": "npm run ibt && lerna publish --conventional-commits",
+    "pub-grad": "npm run ibt && lerna publish --conventional-commits --conventional-graduate",
+    "pub-next": "npm run ibt && lerna publish --conventional-commits --conventional-prerelease --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && npm run test-schema",
