--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "5.8.2",
+  "version": "5.9.0-alpha.0",
   "description": "Types for cspell and cspell-lib",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
