--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -24,8 +24,10 @@ categories:
       - $TITLE (#$NUMBER)
 
 change-template: |
-  - $TITLE (#$NUMBER)
-      > $BODY
+  ### $TITLE (#$NUMBER)
+  
+  $BODY
+
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   major:
