ci: do not lint test fixtures

--- a/.prettierignore
+++ b/.prettierignore
@@ -15,4 +15,5 @@ integration-tests/repositories/*/*/**
 lerna.json
 packages/*/dist/
 packages/cspell-bundled-dicts/cspell-default.config.js
+test-fixtures/**
 tsconfig*.json
