--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -17,6 +17,9 @@ categories:
   - title: "Documentation"
     labels:
       - "documentation"
+  - title: "Testing"
+    labels:
+      - "test"
   - title: "Maintenance"
     labels:
       - "chore"
@@ -63,6 +66,9 @@ autolabeler:
   - label: "feature"
     title:
       - "/^feat/i"
+  - label: "test"
+    title:
+      - "/^test/i"
   - label: "breaking"
     title:
       - "/^fix[!]/i"
