enable incremental typescript builds

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,7 @@ typings/
 # Do not check sensitive files.
 .coveralls.yml
 
+# typescript incremental builds cache
+.tsbuildinfo
+
 # cspell:ignore pids jscoverage wscript jspm dotenv eslintcache
