--- a/packages/cspell-bundled-dicts/tsconfig.json
+++ b/packages/cspell-bundled-dicts/tsconfig.json
@@ -60,6 +60,8 @@
         // "emitDecoratorMetadata": true,               /* Enables experimental support for emitting type metadata for decorators. */
         /* Advanced Options */
         "skipLibCheck": true, /* Skip type checking of declaration files. */
-        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
     }
 }
