--- a/packages/cspell-glob/tsconfig.json
+++ b/packages/cspell-glob/tsconfig.json
@@ -13,7 +13,9 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
 	},
 	"include": [
 		"src/**/*.ts",
