--- a/packages/cspell-lib/tsconfig.json
+++ b/packages/cspell-lib/tsconfig.json
@@ -14,7 +14,9 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
 	},
 	"include": [
 		"src/**/*.ts",
