--- a/packages/cspell-tools/tsconfig.json
+++ b/packages/cspell-tools/tsconfig.json
@@ -11,7 +11,9 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
-		"outDir": "dist"
+		"outDir": "dist",
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
 	},
 	"include": [
 		"src"
