--- a/packages/hunspell-reader/tsconfig.json
+++ b/packages/hunspell-reader/tsconfig.json
@@ -15,7 +15,9 @@
         "preserveConstEnums": false,
         "outDir": "dist",
         "lib": ["dom", "dom.iterable", "es2015"],
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
     },
     "exclude": ["node_modules", "dist"]
 }
