--- a/packages/cspell-io/tsconfig.json
+++ b/packages/cspell-io/tsconfig.json
@@ -16,7 +16,9 @@
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist"
+		"outDir": "dist",
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
 	},
 	"include": [
 		"src"
