--- a/packages/cspell-trie-lib/tsconfig.json
+++ b/packages/cspell-trie-lib/tsconfig.json
@@ -13,7 +13,9 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist"
+		"outDir": "dist",
+		"incremental": true,
+    	"tsBuildInfoFile": "./.tsbuildinfo"
 	},
 	"include": [
 		"src"
