--- a/packages/cspell-trie-lib/.vscode/launch.json
+++ b/packages/cspell-trie-lib/.vscode/launch.json
@@ -4,12 +4,16 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-		{
+        {
             "type": "node",
             "request": "launch",
             "name": "trie-lib: Jest current-file",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
-            "args": ["--runInBand", "${file}"],
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "--runInBand",
+                "${fileBasename}"
+            ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
@@ -22,7 +26,10 @@
             "request": "launch",
             "name": "trie-lib: Jest All",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
-            "args": ["--runInBand"],
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "--runInBand"
+            ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
