--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -33,12 +33,9 @@
     "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-io"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
-  "dependencies": {
-    "iconv-lite": "^0.6.3",
-    "iterable-to-stream": "^2.0.0"
-  },
+  "dependencies": {},
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=12.13.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
