--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -42,11 +42,10 @@
     "commander": "^8.2.0",
     "cspell-trie-lib": "^5.9.0",
     "fs-extra": "^10.0.0",
-    "gensequence": "^3.1.1",
-    "iterable-to-stream": "^2.0.0"
+    "gensequence": "^3.1.1"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=12.13.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
