--- a/packages/cspell-io/.vscode/launch.json
+++ b/packages/cspell-io/.vscode/launch.json
@@ -7,12 +7,19 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/index.js",
-            "preLaunchTask": "tsc: build - tsconfig.json",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ]
+            "name": "cspell-io: Jest current-file",
+            "program": "${workspaceFolder}/../../node_modules/.bin/jest",
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "--runInBand",
+                "${fileBasename}"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "windows": {
+                "program": "${workspaceFolder}/../../node_modules/jest/bin/jest",
+            }
         }
     ]
 }
