--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "5.9.0",
+  "version": "5.9.1-alpha.0",
   "description": "A Spelling Checker for Code!",
   "funding": "https://github.com/streetsidesoftware/cspell?sponsor=1",
   "main": "dist/index.js",
@@ -71,8 +71,8 @@
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "comment-json": "^4.1.1",
-    "cspell-glob": "^5.9.0",
-    "cspell-lib": "^5.9.0",
+    "cspell-glob": "^5.9.1-alpha.0",
+    "cspell-lib": "^5.9.1-alpha.0",
     "fs-extra": "^10.0.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.7",
@@ -83,7 +83,7 @@
     "node": ">=12.13.0"
   },
   "devDependencies": {
-    "@cspell/cspell-types": "^5.9.0",
+    "@cspell/cspell-types": "^5.9.1-alpha.0",
     "@types/fs-extra": "^9.0.12",
     "@types/glob": "^7.1.4",
     "@types/micromatch": "^4.0.2",
