--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-io",
-  "version": "5.9.0",
+  "version": "5.9.1-alpha.0",
   "description": "A library of useful I/O functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -33,7 +33,6 @@
     "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-io"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
-  "dependencies": {},
   "engines": {
     "node": ">=12.13.0"
   },
