--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-tools",
-  "version": "5.9.0",
+  "version": "5.9.1-alpha.0",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "publishConfig": {
@@ -45,12 +45,12 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^8.2.0",
-    "cspell-io": "^5.9.0",
-    "cspell-trie-lib": "^5.9.0",
+    "cspell-io": "^5.9.1-alpha.0",
+    "cspell-trie-lib": "^5.9.1-alpha.0",
     "fs-extra": "^10.0.0",
     "gensequence": "^3.1.1",
     "glob": "^7.1.7",
-    "hunspell-reader": "^5.9.0"
+    "hunspell-reader": "^5.9.1-alpha.0"
   },
   "engines": {
     "node": ">=12.13.0"
