ci: Remove `.tsbuildinfo` during clean

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build-schema": "lerna run build-schema",
     "build-integration-tests": "cd ./integration-tests && npm i",
     "check-spelling": "npx cspell -c cspellrc.json",
-    "clean-build": "lerna run clean-build",
-    "clean": "lerna run clean && rimraf lcov.info",
+    "clean-build": "npm run clean && lerna run clean-build",
+    "clean": "rimraf **/.tsbuildinfo && lerna run clean && rimraf lcov.info",
     "coverage": "lerna run coverage --stream && npm run coverage-collect",
     "coverage-collect": "globcat packages/*/coverage/lcov.info > lcov.info",
     "install": "lerna bootstrap --ci",
