--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -13,7 +13,7 @@
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
     "clean-build": "npm run clean && npm run build",
-    "clean": "rimraf dist temp coverage",
+    "clean": "rimraf dist temp coverage .tsbuildinfo",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
     "test": "jest",
