Revert "enable incremental typescript builds (#1671)"
This reverts commit 3a884db3316499af8a99a47d0c6d065370fe92b8.

--- a/packages/cspell-bundled-dicts/tsconfig.json
+++ b/packages/cspell-bundled-dicts/tsconfig.json
@@ -60,8 +60,6 @@
         // "emitDecoratorMetadata": true,               /* Enables experimental support for emitting type metadata for decorators. */
         /* Advanced Options */
         "skipLibCheck": true, /* Skip type checking of declaration files. */
-        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+        "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     }
 }
