--- a/packages/cspell-io/tsconfig.json
+++ b/packages/cspell-io/tsconfig.json
@@ -16,9 +16,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist",
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+		"outDir": "dist"
 	},
 	"include": [
 		"src"
