--- a/packages/cspell-lib/tsconfig.json
+++ b/packages/cspell-lib/tsconfig.json
@@ -14,9 +14,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true,
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
 		"src/**/*.ts",
