--- a/packages/cspell-trie-lib/tsconfig.json
+++ b/packages/cspell-trie-lib/tsconfig.json
@@ -13,9 +13,7 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist",
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+		"outDir": "dist"
 	},
 	"include": [
 		"src"
