--- a/packages/cspell-tools/tsconfig.json
+++ b/packages/cspell-tools/tsconfig.json
@@ -11,9 +11,7 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true,
-		"outDir": "dist",
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+		"outDir": "dist"
 	},
 	"include": [
 		"src"
