--- a/packages/hunspell-reader/tsconfig.json
+++ b/packages/hunspell-reader/tsconfig.json
@@ -15,9 +15,7 @@
         "preserveConstEnums": false,
         "outDir": "dist",
         "lib": ["dom", "dom.iterable", "es2015"],
-        "forceConsistentCasingInFileNames": true,
-		"incremental": true,
-    	"tsBuildInfoFile": "./.tsbuildinfo"
+        "forceConsistentCasingInFileNames": true
     },
     "exclude": ["node_modules", "dist"]
 }
