--- a/packages/cspell-dynamic-loader/tsconfig.json
+++ b/packages/cspell-dynamic-loader/tsconfig.json
@@ -1,32 +1,10 @@
 {
-	"compilerOptions": {
-		"target": "es2019",
-		"lib": [
-			"es2019",
-			"es2020.promise",
-			"es2020.bigint",
-			"es2020.string"
-		],
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"alwaysStrict": true,
-		"declaration": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"esModuleInterop": true,
-		"strictNullChecks": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true
-	},
-	"include": [
-		"src/**/*.ts",
-		"src/**/*.test.ts"
-	],
-	"exclude": [
-		"node_modules/**",
-		"dist/**"
-	]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist"
+    },
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.test.ts"
+    ]
 }
