--- a/packages/cspell-glob/tsconfig.json
+++ b/packages/cspell-glob/tsconfig.json
@@ -1,28 +1,10 @@
 {
-	"compilerOptions": {
-		"target": "es2019",
-		"lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"alwaysStrict": true,
-        "declaration": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true
-	},
-	"include": [
-		"src/**/*.ts",
-		"src/**/*.test.ts"
-	],
-	"exclude": [
-		"node_modules/**",
-		"dist/**",
-		"dictionaries/**",
-		"samples"
-	]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist"
+    },
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.test.ts"
+    ]
 }
