--- a/packages/cspell-io/tsconfig.json
+++ b/packages/cspell-io/tsconfig.json
@@ -1,24 +1,9 @@
 {
-	"compilerOptions": {
-		"target": "es2019",
-		"lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"alwaysStrict": true,
-        "declaration": true,
-		"noImplicitAny": true,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"newLine": "LF",
-		"strict": true,
-		"strictFunctionTypes": false,
-		"forceConsistentCasingInFileNames": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"outDir": "dist"
-	},
-	"include": [
-		"src"
-	]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist"
+    },
+    "include": [
+        "src"
+    ]
 }
