lint: fix lint issues with hunspell-reader

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -63,6 +63,10 @@
       "node": true,
       "mocha": true
     },
+    "ignorePatterns": [
+      "dist/**",
+      "node_modules/**"
+    ],
     "rules": {}
   },
   "engines": {
