--- a/packages/cspell-dynamic-loader/package.json
+++ b/packages/cspell-dynamic-loader/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "5.9.1-alpha.1",
+  "version": "5.9.1",
   "description": "Load cspell or cspell-lib on demand",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -48,8 +48,8 @@
     "import-fresh": "^3.3.0"
   },
   "devDependencies": {
-    "cspell": "^5.9.1-alpha.1",
-    "cspell-lib": "^5.9.1-alpha.1",
+    "cspell": "^5.9.1",
+    "cspell-lib": "^5.9.1",
     "jest": "^27.1.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.4.3"
