--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-glob",
-  "version": "5.9.1-alpha.1",
+  "version": "5.9.1",
   "description": "Glob matcher for cspell",
   "keywords": [
     "cspell",
