--- a/packages/cspell-bundled-dicts/tsconfig.json
+++ b/packages/cspell-bundled-dicts/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "declaration": false,
+        "declarationMap": false,
         "sourceMap": false
     }
 }
