--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "compilerOptions": {
         "alwaysStrict": true,
         "declaration": true,
+        "declarationMap": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
         "newLine": "LF",
