--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "clean": "rimraf dist temp coverage .tsbuildinfo",
     "build": "npm run compile",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
