--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "clean": "rimraf dist coverage .tsbuildinfo",
     "build": "tsc -p .",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
