--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "build-dev": "lerna run build-dev",
     "build-schema": "lerna run build-schema",
     "build-integration-tests": "cd ./integration-tests && npm i",
     "check-spelling": "npx cspell -c cspellrc.json",
