--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "build-dict": "cspell-tools-cli compile compatibility-words.txt",
     "clean": "echo clean",
     "clean-build": "npm run clean && npm run build",
