--- a/packages/cspell-dynamic-loader/package.json
+++ b/packages/cspell-dynamic-loader/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "clean": "rimraf dist coverage .tsbuildinfo",
     "build": "npm run compile",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "test": "jest",
