--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "build": "tsc -p .",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "watch": "tsc -p . -w",
     "clean": "rimraf dist coverage .tsbuildinfo",
     "clean-build": "npm run clean && npm run build",
