--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "watch": "tsc -p . -w",
     "clean-build": "npm run clean && npm run build",
     "clean": "rimraf dist temp coverage .tsbuildinfo",
