--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "clean": "rimraf dist coverage .tsbuildinfo",
     "build": "npm run compile",
+    "build-dev": "tsc -p tsconfig.dev.json",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
