--- a/packages/cspell-json-reporter/package.json
+++ b/packages/cspell-json-reporter/package.json
@@ -38,10 +38,12 @@
   },
   "files:comment": "Due to a lerna bug, patterns like `!**/*.map` are not getting recursively honored",
   "dependencies": {
-    "@cspell/cspell-types": "^5.9.1"
+    "@cspell/cspell-types": "^5.9.1",
+    "mkdirp": "^1.0.4"
   },
   "devDependencies": {
-    "cspell": "^5.9.1"
+    "cspell": "^5.9.1",
+    "@types/mkdirp": "^1.0.2"
   },
   "engines": {
     "node": ">=12.0.0"
