ci: Workflow Bot -- Update ALL Dependencies

--- a/packages/cspell-json-reporter/package.json
+++ b/packages/cspell-json-reporter/package.json
@@ -42,8 +42,8 @@
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
-    "cspell": "^5.9.1",
-    "@types/mkdirp": "^1.0.2"
+    "@types/mkdirp": "^1.0.2",
+    "cspell": "^5.9.1"
   },
   "engines": {
     "node": ">=12.0.0"
