--- a/packages/cspell-json-reporter/package.json
+++ b/packages/cspell-json-reporter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-json-reporter",
-  "version": "5.9.0",
+  "version": "5.10.0-alpha.0",
   "description": "JSON reporter for CSpell",
   "author": "Jason Dent",
   "license": "MIT",
@@ -38,12 +38,12 @@
   },
   "files:comment": "Due to a lerna bug, patterns like `!**/*.map` are not getting recursively honored",
   "dependencies": {
-    "@cspell/cspell-types": "^5.9.1",
+    "@cspell/cspell-types": "^5.10.0-alpha.0",
     "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "@types/mkdirp": "^1.0.2",
-    "cspell": "^5.9.1"
+    "cspell": "^5.10.0-alpha.0"
   },
   "engines": {
     "node": ">=12.0.0"
