fix: Make dict-en-gb version 2 optional because of license.

--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -43,6 +43,9 @@
     "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-bundled-dicts"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
+  "optionalDependencies": {
+    "@cspell/dict-en-gb": "^2.0.2"
+  },
   "dependencies": {
     "@cspell/dict-ada": "^1.1.2",
     "@cspell/dict-aws": "^1.0.14",
@@ -55,7 +58,7 @@
     "@cspell/dict-django": "^1.0.26",
     "@cspell/dict-dotnet": "^1.0.31",
     "@cspell/dict-elixir": "^1.0.25",
-    "@cspell/dict-en-gb": "^2.0.2",
+    "@cspell/dict-en-gb": "^1.1.33",
     "@cspell/dict-en_us": "^2.1.1",
     "@cspell/dict-filetypes": "^1.1.8",
     "@cspell/dict-fonts": "^1.0.14",
