--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-bundled-dicts",
-  "version": "5.10.0-alpha.6",
+  "version": "5.10.0",
   "description": "Dictionaries bundled with cspell",
   "publishConfig": {
     "access": "public"
@@ -84,7 +84,7 @@
     "node": ">=12.13.0"
   },
   "devDependencies": {
-    "@cspell/cspell-tools": "^5.10.0-alpha.6",
-    "@cspell/cspell-types": "^5.10.0-alpha.6"
+    "@cspell/cspell-tools": "^5.10.0",
+    "@cspell/cspell-types": "^5.10.0"
   }
 }
