Revert "ci: CSpell4 - Disable Coveralls (#1736)"
This reverts commit 0f66fda301f923f922f1c563184dd2cb012b26c0.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -18,11 +18,11 @@ jobs:
       - run: npm ci
       - run: npm run coverage
 
-      # - name: Upload coverage Coveralls
-      #   uses: coverallsapp/github-action@1.1.3
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     path-to-lcov: ./lcov.info
+      - name: Upload coverage Coveralls
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./lcov.info
 
       # Do not upload to Codecov it only supports 1 comparison branch
       # - name: Upload coverage to Codecov
