dev: have the integration tests use a reporter.

--- a/integration-tests/repositories/cspell.yaml
+++ b/integration-tests/repositories/cspell.yaml
@@ -1,4 +1,4 @@
-"$schema": "https://raw.githubusercontent.com/streetsidesoftware/cspell/master/cspell.schema.json"
+"$schema": "https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell.schema.json"
 version: 0.2
 id: integration-test-default
 words:
@@ -11,6 +11,7 @@ ignorePaths:
   - "**/prettier/"
 
 import:
+  - "./cspell-reporter.json"
   - "./cspell-latex.json"
 
 overrides:
