--- a/.prettierignore
+++ b/.prettierignore
@@ -12,6 +12,7 @@ docs/_site/**
 docs/types/cspell-types/**
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
+integration-tests/snapshots/**
 lerna.json
 packages/*/dist/
 packages/cspell-bundled-dicts/cspell-default.config.js
