--- a/integration-tests/snapshots/AdaDoom3/AdaDoom3/report.yaml
+++ b/integration-tests/snapshots/AdaDoom3/AdaDoom3/report.yaml
@@ -888,7 +888,7 @@ issues:
   - "Engine/Systems/Win32/neo-engine-system.adb:719:66	ACPI	U	List (I).hDevice), \"ACPI\") = 0 then -- Avoid"
   - "Engine/Systems/Win32/neo-engine-system.adb:883:94	thier	U	event loop will recieve thier messages"
   - "Engine/Systems/Win32/neo-engine-system.adb:954:14	Thumbsticks	U	-- Thumbsticks"
-  - "Games/DOOM/Assets/Shaders/test-frag.spv:1:37	GLSL	U	\u0000\u0000\u0000\u0000\u0011\u0000\u0002\u0000\u0001\u0000\u0000\u0000 \u0000\u0006\u0000\u0001\u0000\u0000\u0000GLSL.std.450\u0000\u0000\u0000\u0000\u000e\u0000\u0003\u0000\u0000\u0000\u0000\u0000"
+  - "Games/DOOM/Assets/Shaders/test-frag.spv:1:37	GLSL	U	GLSL.std.450"
   - "Games/DOOM/Base/impulses.ads:37:41	moveforward	U	Forward is new Impulse (\"moveforward\", Callback_Move_Forward"
   - "Games/DOOM/Base/impulses.ads:40:38	moveleft	U	Left is new Impulse (\"moveleft\", Callback_Move_Left"
   - "Games/DOOM/Base/impulses.ads:43:39	moveright	U	Right is new Impulse (\"moveright\", Callback_Move_Right"
